--- a/app/src/main/res/layout/todolist_main.xml
+++ b/app/src/main/res/layout/todolist_main.xml
@@ -11,6 +11,17 @@
             android:name="com.aklob.pomer.AddNewTaskView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/add_task_fragment"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="20dp"
+            android:text="今日のTODO"
+            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
     </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
