パッケージ変更

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context="com.mochoi.pomer.MainActivity">
 
     <include layout="@layout/part_titlebar"/>
 
@@ -15,17 +15,17 @@
         android:layout_height="wrap_content">
         <fragment
             android:id="@+id/add_task_fragment"
-            android:name="com.aklob.pomer.AddNewTaskView"
+            android:name="com.mochoi.pomer.AddNewTaskView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </RelativeLayout>
 
 
-    <!--<com.aklob.pomer.AddNewTaskView-->
+    <!--<AddNewTaskView-->
         <!--android:layout_width="wrap_content"-->
         <!--android:layout_height="wrap_content"-->
         <!--android:layout_gravity="bottom|end"-->
-        <!--&gt;</com.aklob.pomer.AddNewTaskView>-->
+        <!--&gt;</AddNewTaskView>-->
     <!--<android.support.design.widget.FloatingActionButton-->
         <!--android:id="@+id/fab"-->
         <!--android:layout_width="wrap_content"-->
