--- a/app/src/main/res/layout/register_task.xml
+++ b/app/src/main/res/layout/register_task.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="taskVM"
-            type="com.aklob.pomer.viewmodel.RegisterTaskVM"/>
+            type="com.mochoi.pomer.viewmodel.RegisterTaskVM"/>
     </data>
 
     <android.support.constraint.ConstraintLayout
