--- a/app/src/main/res/layout/todolist_main.xml
+++ b/app/src/main/res/layout/todolist_main.xml
@@ -8,7 +8,7 @@
         android:layout_height="wrap_content">
         <fragment
             android:id="@+id/add_task_fragment"
-            android:name="com.aklob.pomer.AddNewTaskView"
+            android:name="com.mochoi.pomer.AddNewTaskView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
