--- a/app/src/main/res/layout/register_task.xml
+++ b/app/src/main/res/layout/register_task.xml
@@ -34,7 +34,7 @@
             android:ems="10"
             android:hint="タスク名"
             android:inputType="textPersonName"
-            android:text="@{taskVM.task.taskName}"
+            android:text="@={taskVM.task.taskName}"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/title"
@@ -64,5 +64,17 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintStart_toEndOf="@+id/register_task"
             app:layout_constraintTop_toTopOf="@+id/register_task" />
+
+        <EditText
+            android:id="@+id/editText"
+            android:layout_width="wrap_content"
+            android:layout_height="62dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="@={taskVM.aaa}"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/register_task" />
     </android.support.constraint.ConstraintLayout>
 </layout>
