--- a/app/src/main/res/layout/register_task.xml
+++ b/app/src/main/res/layout/register_task.xml
@@ -46,8 +46,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:onClick="register"
             android:text="登録"
-            android:onClick="@{()->taskVM.register()}"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@color/colorAccent"
             app:layout_constraintStart_toStartOf="@+id/task_name"
