--- a/app/src/main/res/layout/todolist_main.xml
+++ b/app/src/main/res/layout/todolist_main.xml
@@ -19,8 +19,9 @@
             android:layout_height="wrap_content"
             android:layout_alignTop="@+id/add_task_fragment"
             android:layout_alignParentStart="true"
-            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginRight="8dp"
             android:onClick="moveBacklog"
             android:text="バックログ" />
 
