--- a/app/src/main/res/layout/backlog_item.xml
+++ b/app/src/main/res/layout/backlog_item.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="task"
-            type="com.mochoi.pomer.viewmodel.Task"/>
+            type="com.mochoi.pomer.model.Task"/>
     </data>
 
     <LinearLayout
