--- a/app/src/main/res/layout/backlog_item.xml
+++ b/app/src/main/res/layout/backlog_item.xml
@@ -26,11 +26,12 @@
             android:layout_marginLeft="8dp"
             android:layout_weight="9"
             android:gravity="left"
+            android:maxWidth="100dp"
             android:text="@{task.taskName}"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/remove"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
