--- a/app/src/main/res/layout/backlog_main.xml
+++ b/app/src/main/res/layout/backlog_main.xml
@@ -49,7 +49,7 @@
                 android:id="@+id/recycler"
                 items="@{backlogVM.tasks}"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="408dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
