--- a/app/src/main/res/layout/backlog_item.xml
+++ b/app/src/main/res/layout/backlog_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
@@ -9,7 +10,9 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp">
 
         <CheckBox
             android:id="@+id/checkBox"
@@ -19,13 +22,14 @@
             android:layout_weight="1"
             android:gravity="center" />
 
-        <Button
+        <TextView
             android:id="@+id/taskName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_weight="9"
-            android:gravity="left"
+            android:elevation="15dp"
+            android:gravity="start"
             android:maxWidth="100dp"
             android:text="@{task.taskName}"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
@@ -33,8 +37,9 @@
         <ImageView
             android:id="@+id/remove"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             app:srcCompat="@android:drawable/ic_delete" />
     </LinearLayout>
+
 </layout>
