--- a/app/src/main/res/layout/backlog_main.xml
+++ b/app/src/main/res/layout/backlog_main.xml
@@ -47,7 +47,7 @@
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycler"
-                items="@{backlogVM.tasks}"
+                items="@{backlogVM.items}"
                 android:layout_width="match_parent"
                 android:layout_height="408dp"
                 android:layout_marginStart="8dp"
