--- a/app/src/main/res/layout/backlog_main.xml
+++ b/app/src/main/res/layout/backlog_main.xml
@@ -47,7 +47,7 @@
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycler"
-                items="@{backlogVM.items}"
+                backlog_items="@{backlogVM.items}"
                 android:layout_width="match_parent"
                 android:layout_height="408dp"
                 android:layout_marginStart="8dp"
@@ -63,15 +63,29 @@
 
         <Button
             android:id="@+id/button2"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginBottom="16dp"
-            android:text="今日のTODOへ移す"
             android:onClick="moveTaskToTodo"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:text="今日のTODOへ移す"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textColor="@color/colorAccent"
             app:layout_constraintBottom_toBottomOf="@+id/relativeLayout"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toEndOf="@+id/imageView" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/button2"
+            app:srcCompat="@android:drawable/ic_media_ff" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
