--- a/app/src/main/res/layout/backlog_item.xml
+++ b/app/src/main/res/layout/backlog_item.xml
@@ -20,7 +20,7 @@
             android:layout_height="match_parent"
             android:layout_marginRight="0dp"
             android:layout_weight="1"
-            android:gravity="center"
+            android:layout_gravity="center"
             android:checked="@={item.check}"/>
 
         <TextView
@@ -40,6 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:layout_gravity="center"
             app:srcCompat="@android:drawable/ic_delete" />
     </LinearLayout>
 
