--- a/app/src/main/res/layout/todolist_main.xml
+++ b/app/src/main/res/layout/todolist_main.xml
@@ -12,6 +12,7 @@
         android:layout_height="match_parent">
 
         <RelativeLayout
+            android:id="@+id/relativeLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -61,7 +62,33 @@
                 app:layout_constraintStart_toStartOf="@+id/title">
 
             </android.support.v7.widget.RecyclerView>
-        </RelativeLayout>
 
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/add_task_fragment"
+                android:layout_marginLeft="8dp"
+                android:layout_marginBottom="16dp"
+                app:layout_constraintTop_toTopOf="@+id/button2"
+                app:srcCompat="@android:drawable/ic_media_ff" />
+
+            <Button
+                android:id="@+id/button2"
+                style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/imageView"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="0dp"
+                android:layout_marginTop="-16dp"
+                android:layout_toEndOf="@+id/imageView"
+                android:text="バックログへ戻す"
+                android:onClick="moveTaskToBacklog"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textColor="@color/colorAccent"
+                app:layout_constraintStart_toEndOf="@+id/imageView" />
+
+        </RelativeLayout>
     </android.support.constraint.ConstraintLayout>
 </layout>
