--- a/app/src/main/res/layout/registeredit_task.xml
+++ b/app/src/main/res/layout/registeredit_task.xml
@@ -37,35 +37,51 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/textView3"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+            app:layout_constraintTop_toBottomOf="@+id/textView3" >
+        </EditText>
+
+        <EditText
+            android:id="@+id/pomo_cnt"
+            android:layout_width="96dp"
+            android:layout_height="45dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:ems="10"
+            android:inputType="number"
+            android:text="@={taskVM.task.forecastPomo}"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            app:layout_constraintStart_toEndOf="@+id/textView5"
+            app:layout_constraintTop_toBottomOf="@+id/task_name" />
 
         <RelativeLayout
             android:id="@+id/frame_layout"
             android:layout_width="wrap_content"
-            android:layout_height="457dp"
-            app:layout_constraintStart_toStartOf="@+id/task_name"
-            app:layout_constraintTop_toBottomOf="@+id/task_name">>
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/pomo_cnt">
 
             <TextView
                 android:id="@+id/register_task"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
                 android:onClick="register"
                 android:text="登録"
-                android:visibility="@{(taskVM.isRegisterMode)? View.VISIBLE : View.GONE}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:textColor="@color/colorAccent" />
+                android:textColor="@color/colorAccent"
+                android:visibility="@{(taskVM.isRegisterMode)? View.VISIBLE : View.GONE}" />
+
             <TextView
                 android:id="@+id/modify_task"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
                 android:onClick="modify"
                 android:text="更新"
-                android:visibility="@{(taskVM.isRegisterMode)? View.GONE : View.VISIBLE}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:textColor="@color/colorAccent" />
+                android:textColor="@color/colorAccent"
+                android:visibility="@{(taskVM.isRegisterMode)? View.GONE : View.VISIBLE}" />
+
         </RelativeLayout>
 
         <TextView
@@ -79,6 +95,16 @@
             android:textColor="@color/colorAccent"
             app:layout_constraintStart_toEndOf="@+id/frame_layout"
             app:layout_constraintTop_toTopOf="@+id/frame_layout" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="ポモドーロ数"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            app:layout_constraintStart_toStartOf="@+id/task_name"
+            app:layout_constraintTop_toBottomOf="@+id/task_name" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
