--- a/app/src/main/res/layout/registeredit_task.xml
+++ b/app/src/main/res/layout/registeredit_task.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text='@{(taskVM.isRegisterMode)?"バックログへタスクを登録":"タスクを更新"}'
+            android:text='@{(taskVM.isRegisterMode)?"タスクを登録":"タスクを更新"}'
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -39,6 +39,16 @@
             app:layout_constraintStart_toStartOf="@+id/textView3"
             app:layout_constraintTop_toBottomOf="@+id/textView3" >
         </EditText>
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="ポモドーロ数"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            app:layout_constraintStart_toStartOf="@+id/task_name"
+            app:layout_constraintTop_toBottomOf="@+id/task_name" />
 
         <EditText
             android:id="@+id/pomo_cnt"
@@ -58,16 +68,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="32dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/pomo_cnt">
 
             <TextView
-                android:id="@+id/register_task"
+                android:id="@+id/register_task_backlog"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="register"
-                android:text="登録"
+                android:onClick="registerBacklog"
+                android:text="Backlogに登録"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:textColor="@color/colorAccent"
                 android:visibility="@{(taskVM.isRegisterMode)? View.VISIBLE : View.GONE}" />
@@ -85,26 +95,31 @@
         </RelativeLayout>
 
         <TextView
-            android:id="@+id/cancel"
+            android:id="@+id/register_task_todo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="76dp"
-            android:onClick="backActivity"
-            android:text="戻る"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:onClick="registerTodolist"
+            android:text="今日のTodoに登録"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@color/colorAccent"
+            android:visibility="@{(taskVM.isRegisterMode)? View.VISIBLE : View.GONE}"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/frame_layout"
             app:layout_constraintTop_toTopOf="@+id/frame_layout" />
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="ポモドーロ数"
+            android:layout_marginTop="32dp"
+            android:onClick="backActivity"
+            android:text="戻る"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            app:layout_constraintStart_toStartOf="@+id/task_name"
-            app:layout_constraintTop_toBottomOf="@+id/task_name" />
+            android:textColor="@color/colorAccent"
+            app:layout_constraintStart_toStartOf="@+id/frame_layout"
+            app:layout_constraintTop_toBottomOf="@+id/frame_layout" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
