--- a/app/src/main/res/layout/todolist_main.xml
+++ b/app/src/main/res/layout/todolist_main.xml
@@ -32,7 +32,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginRight="8dp"
                 android:onClick="moveBacklog"
-                android:text="バックログ" />
+                android:text="Backlog" />
 
             <TextView
                 android:id="@+id/title"
@@ -87,8 +87,8 @@
                 android:layout_marginStart="0dp"
                 android:layout_marginTop="-16dp"
                 android:layout_toEndOf="@+id/imageView"
-                android:text="バックログへ戻す"
                 android:onClick="moveTaskToBacklog"
+                android:text="Backlogへ戻す"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:textColor="@color/colorAccent"
                 app:layout_constraintStart_toEndOf="@+id/imageView" />
