--- a/app/src/main/res/layout/registeredit_task.xml
+++ b/app/src/main/res/layout/registeredit_task.xml
@@ -58,7 +58,7 @@
             android:layout_marginTop="8dp"
             android:ems="10"
             android:inputType="number"
-            android:text="@={taskVM.task.forecastPomo}"
+            android:text="@={taskVM.forecastPomo}"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintStart_toEndOf="@+id/textView5"
             app:layout_constraintTop_toBottomOf="@+id/task_name" />
