ポモドーロ終了画面作成完了

--- a/app/src/main/res/layout/backlog_item.xml
+++ b/app/src/main/res/layout/backlog_item.xml
@@ -32,6 +32,7 @@
             android:elevation="15dp"
             android:gravity="start"
             android:maxWidth="100dp"
+            android:minWidth="100dp"
             android:text="@{item.task.taskName}"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
