--- a/app/src/main/res/layout/todolist_item.xml
+++ b/app/src/main/res/layout/todolist_item.xml
@@ -41,6 +41,9 @@
             android:id="@+id/pomodoroCount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:minWidth="30dp"
+            android:maxWidth="30dp"
+            android:gravity="end"
             android:text="@{item.workedPomo + `/` + item.forecastPomo}"
             android:textColor="@{(Integer.parseInt(item.workedPomo) > Integer.parseInt(item.forecastPomo)) ? @color/colorAccent : @android:color/black}"
             android:layout_gravity="center"
